environments/dev/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx
  namespace: openedx-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "lms-dev.dlp.engineplatform.co.uk"
    - "cms-dev.dlp.engineplatform.co.uk"
    - "apps-dev.dlp.engineplatform.co.uk"
    secretName: wild-dlp.engineplatform.co.uk-tls
  rules:
  - host: lms-dev.dlp.engineplatform.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: cms-dev.dlp.engineplatform.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
